helm/charts/root-certificate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-cert
  labels:
    app: root-cert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: root-cert
  template:
    metadata:
      labels:
        app: root-cert
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: cert
              mountPath: "/usr/share/nginx/html"
              readOnly: true
            - name: nginx-config
              mountPath: "/etc/nginx/conf.d/default.conf"
              subPath: "default.conf"
              readOnly: true
      volumes:
        - name: cert
          configMap:
            name: step-certificates-certs
            items:
              - key: "root_ca.crt"
                path: "root_ca.crt"
        - name: nginx-config
          configMap:
            name: root-cert-nginx
